fix shifting sides and use styleModel for sides. Added playable pngs for right side

--- a/_sass/_game-style.scss
+++ b/_sass/_game-style.scss
@@ -12,6 +12,8 @@ font-family: NarutoStyle;
 src: url($base-url + '/assets/fonts/njnaruto.ttf');
 }
 
+*[hidden] { display: none; }
+
 p, li{
 	font-family: $primaryFont;
 }
@@ -220,12 +222,12 @@ background-color: #a3a7f0;
 {
 0% {opacity: 0;
 }
-50% {opacity: 1; transform: rotate(45deg);
--webkit-transform: rotate(45deg); /* Safari and Chrome */
--o-transform: rotate(45deg); /* Opera */
--moz-transform: rotate(45deg); /* Firefox */
+50% {
+  opacity: 0.5; 
 }
-100%{}
+100%{
+  opacity: 1;
+}
 }	
 
 @keyframes fadeOut
@@ -239,14 +241,11 @@ left: 1000px;}
 
 @-webkit-keyframes fadeIn
 {
-0% {opacity: 0;
-width: 5%;
-height: 10%;
+0% {
+  opacity: 0;
 }
-50% {opacity: 0.5; 
-
-transform: rotate(45deg);
--webkit-transform: rotate(45deg); /* Safari and Chrome */
+50% {
+  opacity: 0.5; 
 }
 100%{opacity: 1;
 }	
@@ -333,7 +332,7 @@ margin-top: 6%;
 }
 
 #boxes.fillspace.clear{
-clear: left;
+clear: both;
 }
 
 #boxes.fillSpace{
